@@ -1,5 +1,5 @@
 use Test2::V0 -no_srand => 1;
-use Test::Alien;
+use Test::Alien 2.52;
 use Alien::autoconf;
 use Alien::automake;
 use Env qw( @PATH );
@@ -8,16 +8,7 @@ unshift @PATH, Alien::autoconf->bin_dir;
 
 alien_ok 'Alien::automake';
 
-my $wrapper = sub { [@_] };
-
-if($^O eq 'MSWin32')
-{
-  require Alien::MSYS;
-  unshift @PATH, Alien::MSYS::msys_path();
-  $wrapper = sub { [ 'sh', -c => "@_" ] };
-}
-
-run_ok($wrapper->($_, '--version'))
+interpolate_run_ok("%{$_} --version")
   ->success
   ->note for qw( automake aclocal );
 
