@@ -1,6 +1,6 @@
 use Test2::Require::Module 'Test2::Tools::PerlCritic';
 use Test2::Require::Module 'Perl::Critic';
-use Test2::Require::Module 'Perl::Critic::Freenode';
+use Test2::Require::Module 'Perl::Critic::Community';
 use Test2::V0;
 use Perl::Critic;
 use Test2::Tools::PerlCritic;
